      vector on the stack is not big enough to handle at least 10 frames. 
      Fixes oss-fuzz issue 783. 
      
  (c) Handling of (*VERB)s in recursions was wrong in some cases.
  
  (d) Captures in negative assertions that were used as conditions were not
      happening if the assertion matched via (*ACCEPT).   
      
  (e) Mark values were not being passed out of recursions. 
      
2. Now that pcre2_match() no longer uses recursive function calls (see above),
the "match limit recursion" value seems misnamed. It still exists, and limits 
the depth of tree that is searched. To avoid future confusion, it has been 
renamed as "depth limit" in all relevant places (--with-depth-limit, 
(*LIMIT_DEPTH), pcre2_set_depth_limit(), etc) but the old names are still 
available for backwards compatibility. 
       
3. Hardened pcre2test so as to reduce the number of bugs reported by fuzzers:

  (a) Check for malloc failures when getting memory for the ovector (POSIX) or 
      the match data block (non-POSIX). 
      
4. In the 32-bit library in non-UTF mode, an attempt to find a Unicode property
for a character with a code point greater than 0x10ffff (the Unicode maximum)
caused a crash.

5. If a lookbehind assertion that contained a back reference to a group 
appearing later in the pattern was compiled with the PCRE2_ANCHORED option,
undefined actions (often a segmentation fault) could occur, depending on what 
other options were set. An example assertion is (?<!\1(abc)) where the 
reference \1 precedes the group (abc). This fixes oss-fuzz issue 865.

6. Added the PCRE2_INFO_FRAMESIZE item to pcre2_pattern_info() and arranged for 
pcre2test to use it to output the frame size when the "framesize" modifier is
given.

7. Reworked the recursive pattern matching in the JIT compiler to follow the
interpreter changes.

8. When the zero_terminate modifier was specified on a pcre2test subject line 
for global matching, unpredictable things could happen. For example, in UTF-8 